Update close command to fully close app if last window

--- a/work/.config/aerospace/aerospace.toml
+++ b/work/.config/aerospace/aerospace.toml
@@ -100,10 +100,10 @@ automatically-unhide-macos-hidden-apps = false
     # end tell'
     # '''
 
-    alt-w = 'close'
+    alt-w = 'close --quit-if-last-window'
     alt-m = 'fullscreen'
 
-    alt-space = 'exec-and-forget open -n -a Ghostty'
+    alt-enter = 'exec-and-forget open -n -a Ghostty'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#focus
     alt-h = 'focus left --boundaries all-monitors-outer-frame'
@@ -168,7 +168,3 @@ automatically-unhide-macos-hidden-apps = false
     alt-shift-j = ['join-with down', 'mode main']
     alt-shift-k = ['join-with up', 'mode main']
     alt-shift-l = ['join-with right', 'mode main']
-
-    down = 'volume down'
-    up = 'volume up'
-    shift-down = ['volume set 0', 'mode main']
