--- a/work/.config/aerospace/aerospace.toml
+++ b/work/.config/aerospace/aerospace.toml
@@ -148,8 +148,8 @@ automatically-unhide-macos-hidden-apps = false
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
     alt-tab = 'workspace-back-and-forth'
     # See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
-    alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
-    alt-super-l = 'move-workspace-to-monitor --wrap-around right'
+    alt-ctrl-h = 'move-workspace-to-monitor left'
+    alt-ctrl-l = 'move-workspace-to-monitor right'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#mode
     alt-shift-semicolon = 'mode service'
