Change mac hotkeys to cmd

--- a/common/.config/aerospace/aerospace.toml
+++ b/common/.config/aerospace/aerospace.toml
@@ -102,61 +102,61 @@ automatically-unhide-macos-hidden-apps = true
 
     #ctrl-shift-w = 'close'
     #ctrl-w = 'close --quit-if-last-window'
-    ctrl-shift-m = 'fullscreen'
+    cmd-shift-m = 'fullscreen'
 
-    ctrl-enter = 'exec-and-forget open -n -a ghostty'
+    cmd-enter = 'exec-and-forget open -n -a ghostty'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#focus
-    ctrl-h = 'focus left --boundaries all-monitors-outer-frame'
-    ctrl-j = 'focus down --boundaries all-monitors-outer-frame'
-    ctrl-k = 'focus up --boundaries all-monitors-outer-frame'
-    ctrl-l = 'focus right --boundaries all-monitors-outer-frame'
+    cmd-h = 'focus left --boundaries all-monitors-outer-frame'
+    cmd-j = 'focus down --boundaries all-monitors-outer-frame'
+    cmd-k = 'focus up --boundaries all-monitors-outer-frame'
+    cmd-l = 'focus right --boundaries all-monitors-outer-frame'
 
-    ctrl-shift-backslash = 'layout horizontal'
-    ctrl-shift-minus = 'layout vertical'
+    cmd-shift-backslash = 'layout horizontal'
+    cmd-shift-minus = 'layout vertical'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#move
-    ctrl-shift-h = 'move left --boundaries all-monitors-outer-frame'
-    ctrl-shift-j = 'move down --boundaries all-monitors-outer-frame'
-    ctrl-shift-k = 'move up --boundaries all-monitors-outer-frame'
-    ctrl-shift-l = 'move right --boundaries all-monitors-outer-frame'
+    cmd-shift-h = 'move left --boundaries all-monitors-outer-frame'
+    cmd-shift-j = 'move down --boundaries all-monitors-outer-frame'
+    cmd-shift-k = 'move up --boundaries all-monitors-outer-frame'
+    cmd-shift-l = 'move right --boundaries all-monitors-outer-frame'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#resize
-    ctrl-minus = 'resize smart -50'
-    ctrl-equal = 'resize smart +50'
+    cmd-minus = 'resize smart -50'
+    cmd-equal = 'resize smart +50'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-    ctrl-1 = 'workspace 1'
-    ctrl-2 = 'workspace 2'
-    ctrl-3 = 'workspace 3'
-    ctrl-4 = 'workspace 4'
-    ctrl-5 = 'workspace 5'
-    ctrl-6 = 'workspace 6'
-    ctrl-7 = 'workspace 7'
-    ctrl-8 = 'workspace 8'
-    ctrl-9 = 'workspace 9'
-    ctrl-0 = 'workspace 10'
+    cmd-1 = 'workspace 1'
+    cmd-2 = 'workspace 2'
+    cmd-3 = 'workspace 3'
+    cmd-4 = 'workspace 4'
+    cmd-5 = 'workspace 5'
+    cmd-6 = 'workspace 6'
+    cmd-7 = 'workspace 7'
+    cmd-8 = 'workspace 8'
+    cmd-9 = 'workspace 9'
+    cmd-0 = 'workspace 10'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-    ctrl-shift-1 = 'move-node-to-workspace 1'
-    ctrl-shift-2 = 'move-node-to-workspace 2'
-    ctrl-shift-3 = 'move-node-to-workspace 3'
-    ctrl-shift-4 = 'move-node-to-workspace 4'
-    ctrl-shift-5 = 'move-node-to-workspace 5'
-    ctrl-shift-6 = 'move-node-to-workspace 6'
-    ctrl-shift-7 = 'move-node-to-workspace 7'
-    ctrl-shift-8 = 'move-node-to-workspace 8'
-    ctrl-shift-9 = 'move-node-to-workspace 9'
-    ctrl-shift-0 = 'move-node-to-workspace 10'
+    cmd-shift-1 = 'move-node-to-workspace 1'
+    cmd-shift-2 = 'move-node-to-workspace 2'
+    cmd-shift-3 = 'move-node-to-workspace 3'
+    cmd-shift-4 = 'move-node-to-workspace 4'
+    cmd-shift-5 = 'move-node-to-workspace 5'
+    cmd-shift-6 = 'move-node-to-workspace 6'
+    cmd-shift-7 = 'move-node-to-workspace 7'
+    cmd-shift-8 = 'move-node-to-workspace 8'
+    cmd-shift-9 = 'move-node-to-workspace 9'
+    cmd-shift-0 = 'move-node-to-workspace 10'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
-    ctrl-tab = 'workspace-back-and-forth'
+    cmd-tab = 'workspace-back-and-forth'
     # See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
-    ctrl-cmd-h = 'move-workspace-to-monitor left'
-    ctrl-cmd-l = 'move-workspace-to-monitor right'
+    cmd-ctrl-h = 'move-workspace-to-monitor left'
+    cmd-ctrl-l = 'move-workspace-to-monitor right'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#mode
-    ctrl-shift-semicolon = 'mode service'
+    cmd-shift-semicolon = 'mode service'
 
 # 'service' binding mode declaration.
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -169,7 +169,7 @@ automatically-unhide-macos-hidden-apps = true
     # sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
     #s = ['layout sticky tiling', 'mode main']
 
-    ctrl-shift-h = ['join-with left', 'mode main']
-    ctrl-shift-j = ['join-with down', 'mode main']
-    ctrl-shift-k = ['join-with up', 'mode main']
-    ctrl-shift-l = ['join-with right', 'mode main']
+    cmd-shift-h = ['join-with left', 'mode main']
+    cmd-shift-j = ['join-with down', 'mode main']
+    cmd-shift-k = ['join-with up', 'mode main']
+    cmd-shift-l = ['join-with right', 'mode main']
