--- a/common/.config/aerospace/aerospace.toml
+++ b/common/.config/aerospace/aerospace.toml
@@ -153,7 +153,7 @@ automatically-unhide-macos-hidden-apps = true
     ctrl-tab = 'workspace-back-and-forth'
 
     ctrl-shift-tab = 'move-workspace-to-monitor --wrap-around next'
-    ctrl-alt-tab = 'move-workspace-to-monitor --wrap-around previous'
+    ctrl-alt-tab = 'move-workspace-to-monitor --wrap-around prev'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
     ctrl-alt-h = 'move-workspace-to-monitor left'
