--- a/common/.config/aerospace/aerospace.toml
+++ b/common/.config/aerospace/aerospace.toml
@@ -102,7 +102,7 @@ automatically-unhide-macos-hidden-apps = true
 
     #ctrl-shift-w = 'close'
     ctrl-w = 'close --quit-if-last-window'
-    ctrl-shift-m = 'fullscreen'
+    ctrl-f = 'fullscreen'
 
     ctrl-enter = 'exec-and-forget open -n -a iterm'
 
@@ -150,10 +150,8 @@ automatically-unhide-macos-hidden-apps = true
     ctrl-shift-0 = 'move-node-to-workspace 10'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
-    ctrl-tab = 'workspace-back-and-forth'
-
-    ctrl-shift-tab = 'move-workspace-to-monitor --wrap-around next'
-    ctrl-alt-tab = 'move-workspace-to-monitor --wrap-around prev'
+    ctrl-tab = 'workspace --wrap-around next'
+    ctrl-shift-tab = 'workspace --wrap-around prev'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
     ctrl-alt-h = 'move-workspace-to-monitor left'
