--- a/common/.config/opencode/config.json
+++ b/common/.config/opencode/config.json
@@ -1,4 +1,4 @@
 {
   "$schema": "https://opencode.ai/config.json",
-  "plugin": ["opencode-gemini-auth"]
+  "plugin": ["opencode-gemini-auth","opencode-openai-codex-auth"],
 }
