--- a/common/.config/opencode/config.json
+++ b/common/.config/opencode/config.json
@@ -1,4 +1,23 @@
 {
   "$schema": "https://opencode.ai/config.json",
   "plugin": ["opencode-gemini-auth","opencode-openai-codex-auth"],
+  "mcp": {
+    "kagi-search": {
+      "type": "local",
+      "command": [
+        "pass-cli",
+        "run",
+        "--",
+        "bash",
+        "-lc",
+        "bun x github:czottmann/kagi-ken-mcp"
+      ]
+      ,
+
+      "environment": {
+        "KAGI_SESSION_TOKEN": "pass://Main/Kagi/kagi-token"
+      }
+
+    }
+  }
 }
