Add update script from notification in omarchy

--- a/common/.config/hypr/bindings.conf
+++ b/common/.config/hypr/bindings.conf
@@ -47,3 +47,9 @@ bindd = SUPER SHIFT, h, Swap window to the left, movewindow, l
 bindd = SUPER SHIFT, l, Swap window to the right, movewindow, r
 bindd = SUPER SHIFT, k, Swap window up, movewindow, u
 bindd = SUPER SHIFT, j, Swap window down, movewindow, d
+
+# Notification action menu (requires notification with actions)
+bindd = SUPER, N, Notification actions, exec, makoctl menu -- walker --dmenu -p "Action: "
+
+
+
