Remove omarchy specific apps and add hotkeys for quick install and removal

--- a/common/.config/hypr/bindings.conf
+++ b/common/.config/hypr/bindings.conf
@@ -9,13 +9,14 @@ bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
 bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
 bindd = SUPER SHIFT, G, Beeper, exec, omarchy-launch-or-focus ^beeper$ "uwsm-app -- beeper"
 bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus ^obsidian$ "uwsm-app -- obsidian -disable-gpu --enable-wayland-ime"
-bindd = SUPER SHIFT, W, Typora, exec, uwsm-app -- typora --enable-wayland-ime
-bindd = SUPER SHIFT, SLASH, Passwords, exec, uwsm-app -- 1password
+bindd = SUPER SHIFT, SLASH, Passwords, exec, uwsm-app -- proton-pass
+bindd = SUPER SHIFT, I, Install package, exec, omarchy-launch-floating-terminal-with-presentation omarchy-pkg-install
+bindd = SUPER ALT, I, Install aur package, exec, omarchy-launch-floating-terminal-with-presentation omarchy-pkg-aur-install
+bindd = SUPER SHIFT, R, Remove package, exec, omarchy-launch-floating-terminal-with-presentation omarchy-pkg-remove
 
 # If your web app url contains #, type it as ## to prevent hyprland treating it as a comment
 bindd = SUPER SHIFT, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
 bindd = SUPER SHIFT ALT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
-bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
 bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 
@@ -50,6 +51,3 @@ bindd = SUPER SHIFT, j, Swap window down, movewindow, d
 
 # Notification action menu (requires notification with actions)
 bindd = SUPER, N, Notification actions, exec, makoctl menu -- walker --dmenu -p "Action: "
-
-
-
