--- a/common/.config/hypr/bindings.conf
+++ b/common/.config/hypr/bindings.conf
@@ -9,7 +9,7 @@ bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
 bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
 bindd = SUPER SHIFT, G, Beeper, exec, omarchy-launch-or-focus ^beeper$ "uwsm-app -- beeper"
 bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus ^obsidian$ "uwsm-app -- obsidian -disable-gpu --enable-wayland-ime"
-bindd = SUPER SHIFT, SLASH, Passwords, exec, uwsm-app -- proton-pass
+bindd = SUPER SHIFT, SLASH, Passwords, exec, omarchy-launch-or-focus ^proton-pass$ "uwsm-app -- proton-pass"
 bindd = SUPER SHIFT, I, Install package, exec, omarchy-launch-floating-terminal-with-presentation omarchy-pkg-install
 bindd = SUPER ALT, I, Install aur package, exec, omarchy-launch-floating-terminal-with-presentation omarchy-pkg-aur-install
 bindd = SUPER SHIFT, R, Remove package, exec, omarchy-launch-floating-terminal-with-presentation omarchy-pkg-remove
