--- a/common/.config/hypr/autostart.conf
+++ b/common/.config/hypr/autostart.conf
@@ -1,3 +1,4 @@
 # Extra autostart processes
 # exec-once = uwsm-app -- my-service
 exec-once = ~/Applications/proton-login-wrapper
+exec-once = brave
