--- a/common/.config/hypr/bindings.conf
+++ b/common/.config/hypr/bindings.conf
@@ -3,13 +3,14 @@ bindd = SUPER, RETURN, Terminal, exec, uwsm-app -- xdg-terminal-exec --dir="$(om
 bindd = SUPER SHIFT, F, File manager, exec, uwsm-app -- nautilus --new-window
 bindd = SUPER SHIFT, B, Browser, exec, omarchy-launch-browser
 bindd = SUPER SHIFT ALT, B, Browser (private), exec, omarchy-launch-browser --private
+bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-or-focus electron-mail
 bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
 bindd = SUPER SHIFT, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
 bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
-bindd = SUPER SHIFT, G, Beeper, exec, omarchy-launch-or-focus ^beeper$ "uwsm-app -- beeper"
+bindd = SUPER SHIFT, G, Beeper, exec, omarchy-launch-or-focus beeper
 bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus ^obsidian$ "uwsm-app -- obsidian -disable-gpu --enable-wayland-ime"
-bindd = SUPER SHIFT, SLASH, Passwords, exec, omarchy-launch-or-focus ^proton-pass$ "uwsm-app -- proton-pass"
+bindd = SUPER SHIFT, SLASH, Passwords, exec, omarchy-launch-or-focus proton-pass
 bindd = SUPER SHIFT, I, Install package, exec, omarchy-launch-floating-terminal-with-presentation omarchy-pkg-install
 bindd = SUPER ALT, I, Install aur package, exec, omarchy-launch-floating-terminal-with-presentation omarchy-pkg-aur-install
 bindd = SUPER SHIFT, R, Remove package, exec, omarchy-launch-floating-terminal-with-presentation omarchy-pkg-remove
