--- a/common/.config/hypr/monitors.conf
+++ b/common/.config/hypr/monitors.conf
@@ -10,3 +10,7 @@ monitor=,preferred,auto,auto
  monitor = desc: Dell Inc. DELL S2725QS F889T84, 3830x2160@120, auto-left, 2
  monitor = desc: Dell Inc. DELL S2725QS J84BT84, 3830x2160@120, 0x0, 2
  monitor = desc: BOE NE135A1M-NY1, 2880x1920@120, auto-right, 2.5
+
+workspace = 1, monitor:desc: Dell Inc. DELL S2725QS F889T84, 3830x2160@120, auto-left, 2, default:true
+workspace = 2, monitor:desc: Dell Inc. DELL S2725QS J84BT84, 3830x2160@120, 0x0, 2, default:true
+workspace = 3, monitor:desc: BOE NE135A1M-NY1, 2880x1920@120, auto-right, 2.5, default:true
