Change music provider for hyprland binding

--- a/common/.config/hypr/bindings.conf
+++ b/common/.config/hypr/bindings.conf
@@ -4,7 +4,7 @@ bindd = SUPER SHIFT, F, File manager, exec, uwsm-app -- nautilus --new-window
 bindd = SUPER SHIFT, B, Browser, exec, omarchy-launch-browser
 bindd = SUPER SHIFT ALT, B, Browser (private), exec, omarchy-launch-browser --private
 bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-or-focus electron-mail
-bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
+bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-webapp "https://music.1al.cc"
 bindd = SUPER SHIFT, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
 bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
