--- a/common/.config/hypr/monitors.conf
+++ b/common/.config/hypr/monitors.conf
@@ -11,6 +11,6 @@ monitor = desc: Dell Inc. DELL S2725QS F889T84, 3830x2160@120, auto-left, 2
 monitor = desc: Dell Inc. DELL S2725QS J84BT84, 3830x2160@120, 0x0, 2
 monitor = desc: BOE NE135A1M-NY1, 2880x1920@120, auto-right, 2
 
-workspace = 1, monitor:desc: Dell Inc. DELL S2725QS F889T84
-workspace = 2, monitor:desc: Dell Inc. DELL S2725QS J84BT84
-workspace = 3, monitor:desc: BOE NE135A1M-NY1
+workspace = 1, monitor:desc: Dell Inc. DELL S2725QS F889T84, default:true
+workspace = 2, monitor:desc: Dell Inc. DELL S2725QS J84BT84, default:true
+workspace = 3, monitor:desc: BOE NE135A1M-NY1, default:true
