Switch back to basic gemini auth

--- a/common/.config/opencode/config.json
+++ b/common/.config/opencode/config.json
@@ -4,6 +4,6 @@
   [
     "opencode-openai-codex-auth@4.2.0",
     "@mohak34/opencode-notifier@0.1.0",
-    "opencode-google-antigravity-auth@0.2.12"
+    "opencode-gemini-auth@1.3.6"
   ]
 }
