Change flatpak search to standalone program and add binding for hyprland

--- a/common/.config/hypr/bindings.conf
+++ b/common/.config/hypr/bindings.conf
@@ -13,6 +13,7 @@ bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus ^obsidian$ "uwsm
 bindd = SUPER SHIFT, SLASH, Passwords, exec, omarchy-launch-or-focus proton-pass
 bindd = SUPER SHIFT, I, Install package, exec, omarchy-launch-floating-terminal-with-presentation omarchy-pkg-install
 bindd = SUPER ALT, I, Install aur package, exec, omarchy-launch-floating-terminal-with-presentation omarchy-pkg-aur-install
+bindd = SUPER CTRL SHIFT, I, Install flatpak package, exec, omarchy-launch-floating-terminal-with-presentation ~/Applications/fp-browse
 bindd = SUPER SHIFT, R, Remove package, exec, omarchy-launch-floating-terminal-with-presentation omarchy-pkg-remove
 
 # If your web app url contains #, type it as ## to prevent hyprland treating it as a comment
