Split autostart in hyprland to work profile

--- a/personal/.config/hypr/autostart.conf
+++ b/personal/.config/hypr/autostart.conf
@@ -2,3 +2,4 @@
 # exec-once = uwsm-app -- my-service
 exec-once = ~/Applications/proton-login-wrapper
 exec-once = brave
+exec-once = ~/AppImages/oneleet.appimage --password-store="gnome-libsecret"
