Add better LLM handling to opencode

--- a/common/.config/opencode/config.json
+++ b/common/.config/opencode/config.json
@@ -5,5 +5,19 @@
     "opencode-openai-codex-auth@4.3.0",
     "@mohak34/opencode-notifier@0.1.10",
     "opencode-gemini-auth@1.3.6"
-  ]
+  ],
+  "mcp": {
+    "llms-txt": {
+      "type": "local",
+      "command": ["npx", "-y", "@mcp-get-community/server-llm-txt"],
+      "enabled": true
+    },
+    "kagi-ken": {
+      "type": "local",
+      "command": ["npx", "-y", "github:czottmann/kagi-ken-mcp"],
+      "environment": {
+      },
+      "enabled": true
+    }
+  }
 }
