--- a/common/.config/opencode/config.json
+++ b/common/.config/opencode/config.json
@@ -18,6 +18,13 @@
       "environment": {
       },
       "enabled": true
+    },
+    "context7": {
+      "type": "remote",
+      "url": "https://mcp.context7.com/mcp",
+      "headers": {
+      },
+      "enabled": true
     }
   }
 }
