--- a/common/.config/opencode/config.json
+++ b/common/.config/opencode/config.json
@@ -25,6 +25,11 @@
       "headers": {
       },
       "enabled": true
+    },
+    "clickup": {
+      "type": "local",
+      "command": ["npx", "-y", "mcp-remote", "https://mcp.clickup.com/mcp"],
+      "enabled": false
     }
   }
 }
