--- a/common/.config/systemd/user/proton-pass-cli-autologin.service
+++ b/common/.config/systemd/user/proton-pass-cli-autologin.service
@@ -5,6 +5,7 @@ After=network-online.target
 
 [Service]
 Type=simple
+KillMode=process
 Environment=SSH_AGENT_SOCKET=%h/.ssh/proton-pass-agent.sock
 Environment=SSH_AGENT_WAIT_SECONDS=30
 Environment=MAX_NETWORK_WAIT_SECONDS=30
@@ -95,14 +96,17 @@ do_login; \
 echo "Starting monitor loop (healthcheck every ${HEALTHCHECK_INTERVAL}s, plus resume events)..."; \
 last_check=$(date +%s); \
 gdbus monitor --system --dest org.freedesktop.login1 --object-path /org/freedesktop/login1 2>/dev/null | \
-while read -r line; do \
+while true; do \
+  if read -t 60 -r line; then \
+    if echo "$line" | grep -q "PrepareForSleep.*false"; then \
+      echo "System resumed, running health check in 5s..."; \
+      sleep 5; \
+      healthcheck; \
+      last_check=$(date +%s); \
+    fi; \
+  fi; \
   now=$(date +%s); \
-  if echo "$line" | grep -q "PrepareForSleep.*false"; then \
-    echo "System resumed, running health check in 5s..."; \
-    sleep 5; \
-    healthcheck; \
-    last_check=$now; \
-  elif [ $((now - last_check)) -ge $HEALTHCHECK_INTERVAL ]; then \
+  if [ $((now - last_check)) -ge $HEALTHCHECK_INTERVAL ]; then \
     healthcheck; \
     last_check=$now; \
   fi; \
