Add linear to MCP list

--- a/common/.config/opencode/config.json
+++ b/common/.config/opencode/config.json
@@ -26,6 +26,11 @@
       },
       "enabled": true
     },
+    "linear": {
+      "type": "remote",
+      "url": "https://mcp.linear.app/mcp",
+      "enabled": true
+    },
     "clickup": {
       "type": "local",
       "command": ["npx", "-y", "mcp-remote", "https://mcp.clickup.com/mcp"],
