--- a/common/.config/opencode/config.json
+++ b/common/.config/opencode/config.json
@@ -4,14 +4,10 @@
   [
     "opencode-openai-codex-auth@4.3.0",
     "@mohak34/opencode-notifier@0.1.10",
-    "opencode-gemini-auth@1.3.6"
+    "opencode-gemini-auth@1.3.6",
+    "opencode-scheduler"
   ],
   "mcp": {
-    "llms-txt": {
-      "type": "local",
-      "command": ["npx", "-y", "@mcp-get-community/server-llm-txt"],
-      "enabled": true
-    },
     "kagi-ken": {
       "type": "local",
       "command": ["npx", "-y", "github:czottmann/kagi-ken-mcp"],
