Add TTS to opencode

--- a/common/.config/opencode/config.json
+++ b/common/.config/opencode/config.json
@@ -3,9 +3,9 @@
   "plugin":
   [
     "opencode-openai-codex-auth@4.3.0",
-    "@mohak34/opencode-notifier@0.1.10",
     "opencode-gemini-auth@1.3.6",
-    "opencode-scheduler"
+    "opencode-scheduler",
+    "opencode-smart-voice-notify@latest"
   ],
   "mcp": {
     "kagi-ken": {
