--- a/common/.config/opencode/config.json
+++ b/common/.config/opencode/config.json
@@ -10,7 +10,7 @@
   "mcp": {
     "kagi-ken": {
       "type": "local",
-      "command": ["npx", "-y", "github:czottmann/kagi-ken-mcp"],
+      "command": ["/home/lucky/.local/bin/opencode-kagi-ken-mcp"],
       "environment": {
       },
       "enabled": true
