Move opencode TTS hotkey to avoid conflict

--- a/common/.config/hypr/bindings.conf
+++ b/common/.config/hypr/bindings.conf
@@ -55,5 +55,5 @@ bindd = SUPER SHIFT, j, Swap window down, movewindow, d
 # Notification action menu (requires notification with actions)
 bindd = SUPER, N, Notification actions, exec, makoctl menu -- walker --dmenu -p "Action: "
 bindd = CTRL, ESCAPE, Stop Agent TTS, exec, sh -lc 'curl -s -X POST http://localhost:3456/api/tts/stop >/dev/null 2>&1 &'
-bindd = CTRL SHIFT, BRACERIGHT, Next Agent TTS message, exec, sh -lc 'curl -s -X POST http://localhost:3456/api/tts/skip >/dev/null 2>&1 &'
+bindd = SUPER SHIFT, BRACERIGHT, Next Agent TTS message, exec, sh -lc 'curl -s -X POST http://localhost:3456/api/tts/skip >/dev/null 2>&1 &'
 bindd = CTRL SHIFT, ESCAPE, Toggle Agent TTS pause/resume, exec, sh -lc '(status=$(curl -s http://localhost:3456/api/status); if printf "%s" "$status" | grep -q "\"isPlaying\":true"; then curl -s -X POST http://localhost:3456/api/tts/pause; else curl -s -X POST http://localhost:3456/api/tts/resume; fi) >/dev/null 2>&1 &'
