--- a/common/.config/hypr/bindings.conf
+++ b/common/.config/hypr/bindings.conf
@@ -43,8 +43,8 @@ bindd = SUPER, k, Move window focus up, movefocus, u
 bindd = SUPER, j, Move window focus down, movefocus, d
 
 # Move workspaces to other monitors
-bindd = SUPER SHIFT ALT, h, Move workspace to left monitor, movecurrentworkspacetomonitor, l
-bindd = SUPER SHIFT ALT, l, Move workspace to right monitor, movecurrentworkspacetomonitor, r
+bindd = SUPER SHIFT ALT, h, Move workspace to left monitor, swapactiveworkspaces, current l
+bindd = SUPER SHIFT ALT, l, Move workspace to right monitor, swapactiveworkspaces, current r
 
 # Swap active window with the one next to it with SUPER + SHIFT + arrow keys
 bindd = SUPER SHIFT, h, Swap window to the left, movewindow, l
