Disable default context7 mcp in opencode

--- a/common/.config/opencode/config.template.json
+++ b/common/.config/opencode/config.template.json
@@ -20,7 +20,7 @@
       "url": "https://mcp.context7.com/mcp",
       "headers": {
       },
-      "enabled": true
+      "enabled": false
     },
     "linear": {
       "type": "remote",
